14/03/2011:
	- Fixed problem with standalone mode. Can now bind to an FCGI socket by
	  running iipsrv on the command line with the argument --bind.
	  For example: ./iipsrv.fcgi --bind localhost:9000
	- Fixed memory problem reported by valgrind with 16bit images.
	  Now simply use memcpy instead of re-assigning memory blocks. Changes to
	  JTL.cc, DeepZoom.cc and Zoomify.cc.
	- Added extra buffer overhead during JPEG compression.
	- Minor fixes to buffer copy code in Writer.h.
	- Fixed memory leak in Memcached code - need to explicitly free returned
	  objects!


01/12/2010:
	- Modified Main.cc to not check in Memcached if there has been a
	  If-Modified-Since parameter sent and to not store 304 or error replies.
	  Otherwise we risk to send 304 replies to requests from uncached browsers.


25/11/2010:
	- Removed final CRLF from JTL, Zoomify and DeepZoom requests, which causes
	  problems with http pipelining in firefox.


24/11/2010:
	- Added extra checks to both TPTImage and KakaduImage for whether the
	  requested resolution exists.
	- Added ability to KakaduImage to downsize resolutions that were not generated
	  during encoding.
	- Added decompressor.finish() to catch block as finish crashes if called after
	  thread environment shut down.


18/11/2010:
	- Fixed problem when clipping when applying watermarks for both 8 and 16 bit images.


15/11/2010:
	- Added memcached support via libmemcached. List of servers passed via
	  MEMCACHED_SERVERS environment variable. Length of time the cache
	  remains valid set by optional MEMCACHED_TIMEOUT environment variable
	  (default is 3600 seconds). Storage is at output level, rather than tile
	  level, so is complementary to internal tile cache.
	  Thanks to Moravian Library in Brno (Moravska zemska knihovna v Brne,
	  http://www.mzk.cz/) R&D grant MK00009494301 & Old Maps Online
	  (http://www.oldmapsonline.org/) from the Ministry of Culture
	  of the Czech Republic.


06/11/2010: